# genjishimada-bot

./: .gitignore  404.html  Dockerfile  docker-compose.dev.yml  docker-compose.prod.yml  index.html  justfile  main.py  mkdocs.yml  pyproject.toml  ruff.toml  sitemap.xml
.github/workflows/: dev-deploy.yml  lint.yml  prod-deploy.yml  publish-docs.yml
architecture/core-bot/: index.html
architecture/messaging/: index.html
architecture/services/: index.html
configs/: dev.toml  prod.toml
contributing/docs-workflow/: index.html
core/: __init__.py  genji.py
docs/: index.md
docs/architecture/: core-bot.md  messaging.md  services.md
docs/contributing/: docs-workflow.md
docs/operations/: configuration.md
docs/ux/: newsfeed-and-embeds.md
extensions/: __init__.py  _queue_registry.py  api_client.py  api_service.py  change_requests.py  completions.py  events.py  housekeeping.py  information_pages.py  map_search.py  map_submission.py  moderator.py  modmail.py  newsfeed.py  notifications.py  playtest.py  rabbit.py  settings.py  video_thumbnail.py  xp.py
extensions/tags/: __init__.py  tags.py  tags_paginator.py
locales/en-US/: maps.ftl
operations/configuration/: index.html
search/: search_index.json
utilities/: __init__.py  _types.py  base.py  change_requests.py  completions.py  config.py  emojis.py  errors.py  extra.py  formatter.py  maps.py  paginator.py  thumbnails.py  transformers.py
utilities/views/: __init__.py  mod_creator_view.py  mod_edit_map_views.py  mod_guides_view.py  mod_status_view.py
ux/newsfeed-and-embeds/: index.html
